--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
     <div class="container justify-content-center">
 
         <form class="form-signin" id="form" action="/board" method="post">
-            <h1 class="h3 mb-3 font-weight-normal" style="color: aliceblue; text-align: center;">Please sign in</h1>
+            <h1 class="h3 mb-3 font-weight-normal" style="color: blue; text-align: center;">Please sign in</h1>
             <label for="inputEmail" class="sr-only">Email address</label>
             <input type="text" id="inputuser" name="inputuser" class="form-control" placeholder="Email address" required=""autofocus="" value>
             <br>
