--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@
         }
 
         .container {
-            margin-top: 100px;
-            margin-bottom: 100px;
-            margin-right: 100px;
-            margin-left: 590px;
+            padding: 70px 0;
+            text-align: center;
         }
 
         input[type=text],
