--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <style>
         body {
-            background-image: url('signup.jpg');
+            background-image: url('images.jpg');
         }
 
         .container {
