--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
 
     <style>
         body {
-            background-image: url('login.jpg');
+            background-image: url('images.jpg');
         }
 
         .form-signin {
