--- a/index.html
+++ b/index.html
@@ -16,20 +16,19 @@
             <div class="table">
                 <h1 style="font-family: cursive;">Create An Account</h1>
                 <label for="inputuser" class="sr-only">FirstName</label> <br>
-                <input type="text" id="inputfirst" class="form-control" placeholder="FirstName" name="inputfirst" required value="">
+                <input type="text" id="inputfirst"  placeholder="FirstName" name="inputfirst" required value="">
                 <br>
                 <label for="inputlast" class="sr-only">LastName</label> <br>
                 <input type="text" id="inputlast"  placeholder="LastName" name="inputlast" required value="">
-                <input type="text" id="inputlast" class="form-control" placeholder="LastName" name="inputlast" required value="">
                 <br>
                 <label for="inputuser" class="sr-only">UserName</label> <br>
-                <input type="text" id="inputuser" class="form-control" placeholder="UserName" name="inputuser" required value="">
+                <input type="text" id="inputuser"  placeholder="UserName" name="inputuser" required value="">
                 <br>
                 <label for="pass" class="sr-only">password</label><br>
-                <input type="password" id="password" class="form-control" placeholder="Password" name="password" required value=""> <br>
+                <input type="password" id="password" placeholder="Password" name="password" required value=""> <br>
                 <br>
                 <label for="conpass" class="sr-only">password</label>
-                <input type="password" id="confirmpassword" class="form-control" placeholder="Confirm password" required value="">
+                <input type="password" id="confirmpassword"  placeholder="Confirm password" required value="">
                 <br> <br>
                 <button class="btn btn-primary" type="submit" onsubmit="submit()">Sign up</button>
             </div>
