--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div class="container justify-content-center">
+    <div class="container justify-content-center" style="background-image: url('images.jpg');">
 
         <form class="form-signin" id="form" action="/board" method="post">
             <h1 class="h3 mb-3 font-weight-normal" style="color: blue; text-align: center;">Please sign in</h1>
