--- a/login.html
+++ b/login.html
@@ -35,8 +35,10 @@
 
     <style>
         body {
+            background-color: bisque;
             background-image: url('images.jpg');
         }
+        
 
         .form-signin {
             width: 100%;
