--- a/task.html
+++ b/task.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 
-<body style="background: fixed;">
+<body style="background: fixed; background-color: bisque;">
     <form id="form" onsubmit="event.preventDefault();onFormSubmit();" autocomplete="off">
         <div class="container">
             <h2 style="text-align: center;">Welcome</h2>
